objects/chargebeeapps__CB_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>chargebeeapps__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CB Invoices</relationshipLabel>
        <relationshipName>CB_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Amount__c</fullName>
        <description>Invoice Amount</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__CB_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Chargebee Invoice id</description>
        <externalId>true</externalId>
        <label>CB Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>chargebeeapps__CB_Invoice_Id__c</fullName>
        <label>CB Invoice Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__CB_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Site</label>
        <referenceTo>chargebeeapps__CB_Sites__c</referenceTo>
        <relationshipLabel>CB Invoices</relationshipLabel>
        <relationshipName>CB_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Chargebee_Modified_Time__c</fullName>
        <description>Chargebee Modified Time</description>
        <label>Chargebee Modified Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__CustomerID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact Reference</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CB Invoices</relationshipLabel>
        <relationshipName>CB_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__DueDate__c</fullName>
        <description>Invoice Due Date</description>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Due_Amount__c</fullName>
        <description>Invoice due amount</description>
        <label>Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__InvoiceID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>CB Invoice Id</description>
        <externalId>true</externalId>
        <label>Invoice ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>chargebeeapps__Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Next_Retry__c</fullName>
        <description>Invoice payment Next Retry</description>
        <label>Next Retry</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__PONumber__c</fullName>
        <label>PO Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Paid_On__c</fullName>
        <description>Invoice Paid On</description>
        <label>Paid On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__PriceType__c</fullName>
        <description>Invoice price type</description>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TAX_EXCLUSIVE</fullName>
                </value>
                <value>
                    <fullName>TAX_INCLUSIVE</fullName>
                </value>
                <value>
                    <fullName>_UNKNOWN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>chargebeeapps__Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Invoice Recurring</description>
        <label>Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Site__c</fullName>
        <label>Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Status__c</fullName>
        <description>Invoice Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NOT_PAID</fullName>
                </value>
                <value>
                    <fullName>PAID</fullName>
                </value>
                <value>
                    <fullName>PAYMENT_DUE</fullName>
                </value>
                <value>
                    <fullName>PENDING</fullName>
                </value>
                <value>
                    <fullName>POSTED</fullName>
                </value>
                <value>
                    <fullName>VOIDED</fullName>
                </value>
                <value>
                    <fullName>_UNKNOWN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>chargebeeapps__SubTotal__c</fullName>
        <description>Invoice SubTotal</description>
        <label>SubTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__SubscriptionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated Subscription Id</description>
        <label>CB Subscription</label>
        <referenceTo>chargebeeapps__CB_Subscription__c</referenceTo>
        <relationshipLabel>CB Invoices</relationshipLabel>
        <relationshipName>CB_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Tax__c</fullName>
        <description>Invoice total tax</description>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__VATNumber__c</fullName>
        <label>VAT Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CB Invoice</label>
    <listViews>
        <fullName>chargebeeapps__All</fullName>
        <columns>NAME</columns>
        <columns>chargebeeapps__Invoice_Date__c</columns>
        <columns>chargebeeapps__SubscriptionId__c</columns>
        <columns>chargebeeapps__CustomerID__c</columns>
        <columns>chargebeeapps__Amount__c</columns>
        <columns>chargebeeapps__Due_Amount__c</columns>
        <columns>chargebeeapps__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CB Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>